# apiproxy

./: .gitattributes  .gitignore  BUILD.yaml  Dockerfile  LICENSE  Makefile  README.md  TODO.md
.github/: copilot-instructions.md
.github/prompts/: plan-anthropicProtocolCompatibility.prompt.md  plan-appAndTokenModelAccessControl.prompt.md  plan-dailyWeeklyUsageStats.prompt.md  plan-fixStreamingDisconnectAndStatusRefreshRace.prompt.md  plan-nodePermanentTrust.prompt.md  plan-多实例报表任务幂等化任务.md
docs/: api.md  schemas.md
docs/api/: api.md
docs/wiki/content/: 安全和认证.md  快速开始.md  故障排除.md  测试指南.md  监控和日志.md  负载均衡策略.md  部署指南.md  配置管理.md  项目概述.md
docs/wiki/content/API参考文档/: API参考文档.md  管理API.md  节点管理API.md  配额管理API.md
docs/wiki/content/API参考文档/OpenAI兼容API/: Chat Completions接口.md  Embeddings接口.md  Models查询接口.md  OpenAI兼容API.md
docs/wiki/content/API参考文档/模型服务API/: Anthropic兼容API.md  Completions接口.md  Models查询接口.md  OpenAI兼容API.md  Rerank接口.md  Responses接口.md
docs/wiki/content/数据模型设计/: 数据库迁移管理.md  数据模型设计.md  数据访问模式.md  核心数据模型.md
docs/wiki/content/核心服务架构/: 数据库服务.md  核心服务架构.md  设置服务.md
docs/wiki/content/核心服务架构/NodeProxyService核心代理服务/: NodeProxyService核心代理服务.md  服务初始化与生命周期管理.md  节点健康检查与监控.md  请求处理流程.md  负载均衡策略实现.md  配置刷新机制.md  配额管理系统.md
docs/wiki/meta/: repowiki-metadata.json
scripts/: init-db.sh  start.sh
src/apiproxy/: .env.local  README.md  proxy_config.yml  pyproject.toml
src/apiproxy/openaiproxy/: alembic.ini  api_client.py  constants.py  main.py  protocol.py  proxy_config.yml  settings.py
src/apiproxy/openaiproxy/alembic/: env.py  script.py.mako
src/apiproxy/openaiproxy/alembic/versions/: 04674948678b_add_video_task_persistence.py  0e4bdcd25316_add_northbound_apikey_and_app_quotas.py  11b4c0f9c6d2_add_audio_proxy_support.py  289442e9b00c_init.py  3f7d2c9a1b4e_add_protocol_columns.py  4a8d0d5dbf12_add_responses_request_action.py  5d2d9d6e8f31_add_trusted_without_models_endpoint.py  817dfe2df2ef_.py  84af435ce6f4_add_video_generation_proxy_support.py  89d6a55f7d12_add_database_task_locks.py  8b1f6d4c2e90_add_model_access_policies.py  9f4f5c2b1d7a_add_auto_v1_api_to_nodes.py  af7f2705e7ff_.py  bafe420807ac_daily_and_weekly_usage_rollup.py  c2a5c7e5f3b1_apikey_security_and_monthly_rollup.py  ce119dede356_add_image_generation_proxy_support.py  d50f6d625d70_.py  e30ff8554e54_add_node_reason_column.py
src/apiproxy/openaiproxy/api/: __init__.py  apikey_manager.py  apikey_quotas.py  app_model_access_policies.py  app_quotas.py  custom_openai_docs.py  health_check.py  health_check_router.py  model_request_logs.py  node_manager.py  node_model_quotas.py  nodemanager_router.py  router.py  schemas.py  utils.py
src/apiproxy/openaiproxy/api/v1/: __init__.py  anthropic.py  audio.py  completions.py  embeddings.py  images.py  models.py  protocol_adapters.py  rerank.py  responses.py  videos.py
src/apiproxy/openaiproxy/html/: dash.html  index.html
src/apiproxy/openaiproxy/logging/: logger.py  setup.py
src/apiproxy/openaiproxy/services/: __init__.py  base.py  deps.py  factory.py  manager.py  schema.py  utils.py
src/apiproxy/openaiproxy/services/database/: __init__.py  factory.py  service.py  utils.py
src/apiproxy/openaiproxy/services/database/models/: __init__.py  base.py
src/apiproxy/openaiproxy/services/database/models/apikey/: __init__.py  crud.py  model.py  utils.py
src/apiproxy/openaiproxy/services/database/models/app/: __init__.py  crud.py  model.py  utils.py
src/apiproxy/openaiproxy/services/database/models/node/: __init__.py  crud.py  model.py  utils.py
src/apiproxy/openaiproxy/services/database/models/proxy/: __init__.py  crud.py  model.py  utils.py
src/apiproxy/openaiproxy/services/nodemanager/: constants.py  factory.py  schemas.py  service.py
src/apiproxy/openaiproxy/services/nodeproxy/: constants.py  exceptions.py  factory.py  schemas.py  service.py
src/apiproxy/openaiproxy/services/settings/: __init__.py  base.py  factory.py  manager.py  service.py
src/apiproxy/openaiproxy/utils/: api_client.py  apikey.py  async_helpers.py  concurrency.py  configs.py  migration.py  sqlalchemy.py  timezone.py  version.py  viagateway.py
src/apiproxy/scripts/: start.sh
src/apiproxy/tests/: conftest.py
src/apiproxy/tests/api/: test_anthropic.py  test_apikey_manager.py  test_audio.py  test_completions_responses.py  test_completions_runtime.py  test_health_check.py  test_images.py  test_model_access_control.py  test_model_request_logs.py  test_node_manager.py  test_nodemanager.py  test_quota_apis.py  test_responses.py  test_videos.py
src/apiproxy/tests/database/: test_apikey_crud.py  test_apikey_quota.py  test_app_quota.py  test_daily_usage_rollup.py  test_monthly_usage_rollup.py  test_node_crud.py  test_node_model_quota.py  test_proxy_crud.py  test_task_lock.py  test_weekly_usage_rollup.py
src/apiproxy/tests/services/: test_nodeproxy_service.py  test_protocol_compatibility_unit.py
src/apiproxy/tests/unit/: test_disconnect_handler_streaming_response.py  test_protocol_adapters.py
